--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
         <li>Azim: professional soccer player</li>
       </ul>
     </section>
+    <section>
+      <h><a href="https://rustam231.github.io/">github</a></h>
+    </section>
   </main>
 </body>
 
