--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
         <li>Azim: professional soccer player</li>
       </ul>
     </section>
-    <section>
-      <h><a href="https://rustam231.github.io/">github</a></h>
+    <section id="github">
+      <h><a href="https://rustam231.github.io/">Github</a></h>
     </section>
   </main>
 </body>
