--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <li>Azim: professional soccer player</li>
       </ul>
     </section>
-    <section id="github">
+    <section class="github">
       <h><a href="https://rustam231.github.io/">Github</a></h>
     </section>
   </main>
